Committing new project files

--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,12 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "node_modules/ngx-extended-pdf-viewer/bleeding-edge/",
+                "output": "/bleeding-edge/"
+              }
             ],
             "styles": [
               "src/styles.scss"
@@ -103,5 +108,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "9d9db765-7616-41fd-be96-4ae4da92d6c6"
   }
 }
